--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
 	  </div>
 	</nav>
 
-	<main class="content-wrapper">  
-	</main>
+	<div class="d">
+		
+	</div>
 
+	<!-- поля для входа и регистрации -->
 	<div id="field_login">
 		<div class="login_register_div bg-dark">
 			<button id="close_btn">✕</button>
