--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@
 			         		<p class="item_theme">Тема твоего опроса</p>
 			         	</div>
 			       	</li>
+			       	<li class="nav-item list_item_block">
+			         	<a class="nav-link list_item text-light" href="#">Название твоего опроса</a>
+			         	<div class="nav-link text-light">
+			         		<p class="item_theme">Тема твоего опроса</p>
+			         	</div>
+			       	</li>
+			       	<li class="nav-item list_item_block">
+			         	<a class="nav-link list_item text-light" href="#">Название твоего опроса</a>
+			         	<div class="nav-link text-light">
+			         		<p class="item_theme">Тема твоего опроса</p>
+			         	</div>
+			       	</li>
+			       	<li class="nav-item list_item_block">
+			         	<a class="nav-link list_item text-light" href="#">Название твоего опроса</a>
+			         	<div class="nav-link text-light">
+			         		<p class="item_theme">Тема твоего опроса</p>
+			         	</div>
+			       	</li>
+			       	<li class="nav-item list_item_block">
+			         	<a class="nav-link list_item text-light" href="#">Название твоего опроса</a>
+			         	<div class="nav-link text-light">
+			         		<p class="item_theme">Тема твоего опроса</p>
+			         	</div>
+			       	</li>
+			       	<li class="nav-item list_item_block">
+			         	<a class="nav-link list_item text-light" href="#">Название твоего опроса</a>
+			         	<div class="nav-link text-light">
+			         		<p class="item_theme">Тема твоего опроса</p>
+			         	</div>
+			       	</li>
 			     	</ul>
 					</div>
 	      </li>
