add right pass to front

--- a/app/tamplates/index.html
+++ b/app/tamplates/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Election</title>
-	<link rel="stylesheet" href="/style/main.css">
+	<link rel="stylesheet" href="../static/style/main.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -148,9 +148,9 @@
 		</div>
 	</div>
 	
-	<script src="/src/login.js"></script>
-	<script src="/src/list.js"></script>
-	<script src="/src/menu.js"></script>
-	<script src="/src/builder.js"></script>
+	<script src="../static/src/login.js"></script>
+	<script src="../static/src/list.js"></script>
+	<script src="../static/src/menu.js"></script>
+	<script src="../static/src/builder.js"></script>
 </body>
 </html>
