C:/Program Files/Git/register

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 			<div id="center_reg">
 				<h2>Регистрация</h2>
 				<form action="/register" id="register_data" method="post">
-					<input type="text" placeholder="имя пользователя" id="username_nick" name="userName">
-					<input type="email" placeholder="example@mail.ru" id="email_input_reg" name="userEmail">
-					<input type="password" placeholder="пароль" id="password_input_reg" name="userPassword" autocomplete="on">
+					<input type="text" placeholder="имя пользователя" id="username_nick" name="userNameReg">
+					<input type="email" placeholder="example@mail.ru" id="email_input_reg" name="userEmailReg">
+					<input type="password" placeholder="пароль" id="password_input_reg" name="userPasswordReg" autocomplete="on">
 					<input type="password" placeholder="подтвердите пароль" id="password_confirm" name="userPasswordConfirm" autocomplete="on">
 				</form>
 				<button type="submit" form="register_data" id="submit_btn_reg">Зарегистрироваться</button>
