--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-primary" id="menu">
-	  <a class="navbar-brand text-light" href="#">Surveys</a>
+	  <a class="navbar-brand text-light" href="#"> YourVoice.ru</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 	  </button>
@@ -21,8 +21,8 @@
 	  <div class="collapse navbar-collapse" id="navbarCollapse">
 	    <ul class="navbar-nav ml-auto sidenav nav flex-column bg-primary" id="navAccordion">
 	      <li class="nav-item ml-2">
-	        <a class="nav-link text-light" href="#" id="enter_link">Войти </a>
-	        <button id="close_btn_logined">✕</button>
+	        <a class="nav-link text-light" href="#" id="enter_link">Войти</a>
+	        <button id="close_btn_logined" data-title="Выйти из профиля">✕</button>
 	      </li>
 	      <li class="nav-item ml-2">
 	        <a class="nav-link text-light" href="#" id="personal">Личный кабинет</a>
@@ -86,33 +86,53 @@
 					</div>
 	      </li>
 	      <li class="nav-item nav_item_menu_footer">
-	      	<a class="nav-link text-light" id="info_menu_footer" href="#">Info</a>
+	      	<!-- <a class="nav-link text-light" id="info_menu_footer" href="#">Info</a> -->
 	      </li>
 	    </ul>
 	  </div>
 	</nav>
 
 	<!-- основной контент + конструктор -->
-	<!-- <div class="main_content">
-		<div class="survey_builder">
-
-			<div class="build_field bg-dark">
-				<h2 id="h_survey">Тема опроса</h2>
-				<h2 id="candidates">Варианты</h2>
-				<div id="candidates_inputs">
-					<div class="candidate_option">
-						<input type="text" placeholder="Имя кандидата">
-						<input type="text" placeholder="Оценка">
-						
+	<div class="main_content">
+		<div class="content">
+			<div class="survey_field">
+				<div class="theme_field">
+					<h2 class="display-4">Тема опроса</h2>
+					<input type="text" class="theme_input">
+				</div>
+				<div class="answer_choice">
+					<h2 class="display-4">Варианты ответов</h2>
+					<div class="choice">
+						<input type="text" class="mark_your_choice">
+						<div class="name_and_discription">
+							<input type="text" class="name_of_choice">
+							<div class="discription">
+								<span class="label_discription">описание</span>
+								<span class="symbol_discription">&#9660;</span>
+							</div>
+						</div>
+						<button class="del_servey_choice">✕</button>
 					</div>
+					<!-- <div class="choice">
+						<input type="text" class="mark_your_choice">
+						<input type="text" class="name_of_choice">
+						<button class="del_servey_choice">✕</button> -->
+						<!-- <div class="description">
+							<label>описание</label>
+						</div>
+					</div> -->
+					<!-- <div class="choice">
+						<input type="text" class="mark_your_choice">
+						<input type="text" class="name_of_choice">
+						<button class="del_servey_choice">✕</button> -->
+						<!-- <div class="description">
+							<label>описание</label>
+						</div>
+					</div> -->
 				</div>
 			</div>
-
-			<div class="castomaizer bg-dark">
-				
-			</div>
-		</div>
-	</div> -->
+		</div>	
+	</div>
 
 	<!-- поля для входа и регистрации -->
 	<div id="field_login">
