--- a/index.html
+++ b/index.html
@@ -104,31 +104,58 @@
 					<h2 class="display-4">Варианты ответов</h2>
 					<div class="choice">
 						<input type="text" class="mark_your_choice">
-						<div class="name_and_discription">
+						<div class="name_and_description">
 							<input type="text" class="name_of_choice">
-							<div class="discription">
-								<span class="label_discription">описание</span>
-								<span class="symbol_discription">&#9660;</span>
+							<div class="description">
+								<span class="label_description">описание</span>
+								<span class="symbol_description">&#9660;</span>
+							</div>
+							<div class="add_description">
+								<span class="add">Добавить описание +</span>
+							</div>
+							<div class="remove_description">
+								<span class="remove">Удалить oписание -</span>
 							</div>
 						</div>
 						<button class="del_servey_choice">✕</button>
+						<div class="description_textarea_photo">
+							<div>
+								<input type="file" id="file" name="file" class="inputfile">
+            		<label for="file">Open from file</label>
+								<img src="../img/photo.jpg" height="100px" class="description_photo">
+							</div>
+							<div>
+								<textarea cols="30" rows="10" class="description_textarea"></textarea>
+							</div>
+						</div>
 					</div>
-					<!-- <div class="choice">
+					<div class="choice">
 						<input type="text" class="mark_your_choice">
-						<input type="text" class="name_of_choice">
-						<button class="del_servey_choice">✕</button> -->
-						<!-- <div class="description">
-							<label>описание</label>
+						<div class="name_and_description">
+							<input type="text" class="name_of_choice">
+							<div class="description">
+								<span class="label_description">описание</span>
+								<span class="symbol_description">&#9660;</span>
+							</div>
+							<div class="add_description">
+								<span class="add">Добавить описание +</span>
+							</div>
+							<div class="remove_description">
+								<span class="remove">Удалить oписание -</span>
+							</div>
 						</div>
-					</div> -->
-					<!-- <div class="choice">
-						<input type="text" class="mark_your_choice">
-						<input type="text" class="name_of_choice">
-						<button class="del_servey_choice">✕</button> -->
-						<!-- <div class="description">
-							<label>описание</label>
+						<button class="del_servey_choice">✕</button>
+						<div class="description_textarea_photo">
+							<div>
+								<input type="file" id="file" name="file" class="inputfile">
+            		<label for="file">Open from file</label>
+								<img src="../img/photo.jpg" height="100px" class="description_photo">
+							</div>
+							<div>
+								<textarea cols="30" rows="10" class="description_textarea"></textarea>
+							</div>
 						</div>
-					</div> -->
+					</div>
 				</div>
 			</div>
 		</div>	
