--- a/index.html
+++ b/index.html
@@ -119,37 +119,9 @@
 						</div>
 						<button class="del_servey_choice">✕</button>
 						<div class="description_textarea_photo">
-							<div>
+							<div class="description_photo">
 								<input type="file" id="file" name="file" class="inputfile">
-            		<label for="file">Open from file</label>
-								<img src="../img/photo.jpg" height="100px" class="description_photo">
-							</div>
-							<div>
-								<textarea cols="30" rows="10" class="description_textarea"></textarea>
-							</div>
-						</div>
-					</div>
-					<div class="choice">
-						<input type="text" class="mark_your_choice">
-						<div class="name_and_description">
-							<input type="text" class="name_of_choice">
-							<div class="description">
-								<span class="label_description">описание</span>
-								<span class="symbol_description">&#9660;</span>
-							</div>
-							<div class="add_description">
-								<span class="add">Добавить описание +</span>
-							</div>
-							<div class="remove_description">
-								<span class="remove">Удалить oписание -</span>
-							</div>
-						</div>
-						<button class="del_servey_choice">✕</button>
-						<div class="description_textarea_photo">
-							<div>
-								<input type="file" id="file" name="file" class="inputfile">
-            		<label for="file">Open from file</label>
-								<img src="../img/photo.jpg" height="100px" class="description_photo">
+            		<label for="file">Добавить <br> фотографию</label>
 							</div>
 							<div>
 								<textarea cols="30" rows="10" class="description_textarea"></textarea>
